tests/literals.c
'c';
'9';
'_';
'A';
'\t';
'\b';
'\n';
'\r';
'\f';
'\'';
'\"';
'\\';
'\0';
'A';
'AB'; // should give an error
'\np'; // error

"hi \"hello\""
"this is a string"
"newline \n"